--- a/src/components/About.module.scss
+++ b/src/components/About.module.scss
@@ -157,21 +157,22 @@
   max-width: 100%;
   padding-left: 2rem;
   
-  // Vertical timeline line
+  // Single horizontal timeline line
   &::before {
     content: '';
     position: absolute;
-    left: 1rem;
-    top: 0;
-    bottom: 0;
-    width: 3px;
+    left: 0;
+    right: 0;
+    top: 50%;
+    height: 3px;
     background: linear-gradient(
-      to bottom,
+      to right,
       $secondary 0%,
       $primary 50%,
       $secondary 100%
     );
     border-radius: 2px;
+    transform: translateY(-50%);
   }
 }
 
@@ -249,7 +250,7 @@
 }
 
 .timelineTitle {
-  color: $foreground;
+  color: #ffffff;
   font-weight: 600;
   font-size: 1.2rem;
   flex: 1;
@@ -763,7 +764,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 769px) {
   .about {
     padding: 4rem 0;
   }
@@ -798,12 +799,6 @@
     align-self: center;
   }
   
-  .dragonAvatar {
-    width: 100px;
-    height: 100px;
-    font-size: 2.5rem;
-  }
-  
   .paragraph {
     font-size: 1rem;
   }
@@ -813,7 +808,7 @@
   }
   
   .profileImg {
-    max-width: 500px;
+    width: 300px;
   }
   
   .timeline {
@@ -854,6 +849,11 @@
   }
 }
 
+@media (max-width: 769) and (min-width: 426px) {
+  .profileImg {
+    width: 450px;
+  }
+}
 @media (max-width: 480px) {
   .cvExample {
     padding: 1rem;
