--- a/src/components/Skills.module.scss
+++ b/src/components/Skills.module.scss
@@ -68,17 +68,12 @@ $slate-dark: #1E293B;
   letter-spacing: $letter-spacing-tight;
 }
 
-
 .categories {
   display: flex;
-  gap: 1rem;
+  gap: 2rem;
   margin: 2rem 0;
   z-index: 1;
 }
-
-
-
-
 
 .category {
   background: rgba(15, 23, 42, 0.78);
@@ -297,6 +292,7 @@ $slate-dark: #1E293B;
   }
 
   .categories {
+    flex-direction: column;
     gap: 2rem;
   }
 
