--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -516,18 +516,7 @@ small, .meta {
 
 
 
-// Bigger normal cursor
-* {
-  cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path d="M0 0 L0 28 L8 20 L12 24 L16 20 L8 12 L28 0 Z" fill="white" stroke="black" stroke-width="2"/></svg>') 16 16, auto !important;
-}
-
+// Standard cursor behavior
 button, a, input, textarea, select, [role="button"] {
-  cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path d="M0 0 L0 28 L8 20 L12 24 L16 20 L8 12 L28 0 Z" fill="white" stroke="black" stroke-width="2"/></svg>') 16 16, pointer !important;
-}
-
-// Mobile cursor behavior - ensure interactive elements show pointer
-@media (max-width: 768px) {
-  button, a, input, textarea, select, [role="button"] {
-    cursor: pointer !important;
-  }
+  cursor: pointer;
 }
