--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,5 +1,14 @@
 @use "../styles/variables" as *;
 
+// Floating CTA - Hide on mobile
+.floating-cta {
+  display: block;
+  
+  @media (max-width: 768px) {
+    display: none !important;
+  }
+}
+
 // Accessibility and Focus Management
 
 html {
