--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -15,12 +15,18 @@ html {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  font-family: var(--font-inter), 'Inter', system-ui, sans-serif;
+  font-feature-settings: 'cv02', 'cv03', 'cv04', 'cv11';
 }
 
 // Focus indicators for accessibility
