--- a/src/components/Navigation.module.scss
+++ b/src/components/Navigation.module.scss
@@ -109,6 +109,14 @@ $font-weight-medium: 500;
   z-index: 1002; // Above container
 }
 
+.menuOpen {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  position: relative;
+  z-index: 1002;
+}
+
 
 .navItem {
   font-family: $font-satoshi;
