--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -18,6 +18,7 @@ html {
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
+  scroll-behavior: smooth;
   -moz-osx-font-smoothing: grayscale;
 }
 
