--- a/src/components/Navigation.module.scss
+++ b/src/components/Navigation.module.scss
@@ -352,7 +352,7 @@ $font-weight-medium: 500;
 
 .visualizer {
   display: flex;
-  align-items: end;
+  align-items: flex-end;
   gap: 2px;
   height: 20px;
   margin-left: 0.5rem;
